JumpScript/tests/baselines/reference/reExportGlobalDeclaration4.errors.txt
tests/cases/compiler/file2.jump(1,9): error TS2661: Cannot export 'Cls1'. Only local declarations can be exported from a module.
tests/cases/compiler/file2.jump(1,15): error TS2661: Cannot export 'Cls1'. Only local declarations can be exported from a module.
tests/cases/compiler/file2.jump(2,9): error TS2661: Cannot export 'Cls2'. Only local declarations can be exported from a module.
tests/cases/compiler/file2.jump(2,15): error TS2661: Cannot export 'Cls2'. Only local declarations can be exported from a module.
tests/cases/compiler/file2.jump(3,9): error TS2661: Cannot export 'Cls1'. Only local declarations can be exported from a module.
tests/cases/compiler/file2.jump(4,9): error TS2661: Cannot export 'Cls2'. Only local declarations can be exported from a module.


==== tests/cases/compiler/file1.d.jump (0 errors) ====
    declare class Cls1 {
        x: number
    }
    declare class Cls2 {
        x: number
    }
    
    
==== tests/cases/compiler/file2.jump (6 errors) ====
    export {Cls1, Cls1 as CCls1};
            ~~~~
!!! error TS2661: Cannot export 'Cls1'. Only local declarations can be exported from a module.
                  ~~~~
!!! error TS2661: Cannot export 'Cls1'. Only local declarations can be exported from a module.
    export {Cls2, Cls2 as CCls2};
            ~~~~
!!! error TS2661: Cannot export 'Cls2'. Only local declarations can be exported from a module.
                  ~~~~
!!! error TS2661: Cannot export 'Cls2'. Only local declarations can be exported from a module.
    export {Cls1 as CCCls1};
            ~~~~
!!! error TS2661: Cannot export 'Cls1'. Only local declarations can be exported from a module.
    export {Cls2 as CCCls2};
            ~~~~
!!! error TS2661: Cannot export 'Cls2'. Only local declarations can be exported from a module.